tests/errors/lexer/011.ura
// errors/lexer/011 — unknown escape sequence in char literal
use "@/header"

main():
    c char = '\q'
    output(c, "\n")
