tests/errors/lexer/011.err
[1m[0;31merror: [0munknown escape character: \q
  [1m[34m-->[0m src/tests/errors/lexer/011.ura:5:15
  [1m[34m|[0m
[1m[34m5 |[0m     c char = '\q'
  [1m[34m|[0m               [1;31m^^[0m
